--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,8 @@ color: #03a9f4;
  transition:all .5s ease;
 }
 .botnnva:hover{
+  background-color: #03a9f4 !important;
+  color: #fff !important;
   box-shadow: 0px 0px 6px #03a9f4;
   
 }
@@ -69,6 +71,8 @@ color: #03a9f4;
  transition:all .5s ease;
 }
 .botnret:hover{
+  background-color: #ff6d00 !important;
+  color: #fff !important;
   box-shadow: 0px 0px 6px #ff6d00;
   
 }
@@ -80,9 +84,12 @@ color: #03a9f4;
  transition:all .5s ease;
 }
 .botncar:hover{
+  background-color: #33691e;
+  color:#fff !important;
   box-shadow: 0px 0px 6px #33691e ;
   
 }
+
 .medium-letter{
   color: #03a9f4 !important;
   font-size: 1em !important;
