--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,13 @@
 .be-blue{
 	background-color: #14192A !important;
 }
+.be-blue-letras{
+  color: #14192A !important;
+}
 .azul-claro{
   background-color: #03a9f4 !important;
 }
+
 ul.azul li{
   transition:all .3s ;
 }
@@ -13,8 +17,7 @@ ul.azul li:hover{
 
 }
 .activo{
-  background-color: #03a9f4 !important;
-  
+  background-color: rgba(3,169,244,.9) !important;
 }
 .divider{
   border-top: 1px dotted #000;
@@ -51,9 +54,23 @@ color: #03a9f4;
   width: 3em;
   border-radius: 20px;
 }
+#documentos{
+  height: 420px;
+  overflow: hidden;
+}
+#documentos:hover{
+  overflow: auto;
+}
+.encabezado{
+  padding: .2em;
+  border: 1px solid #03a9f4 !important;
+  background-color: #fff !important;
+  border-radius: 3px;
+}
 .botnnva{
-  padding: .3em;
+ padding: .3em;
  border: 1px solid #03a9f4 !important;
+ background-color: #fff !important;
  border-radius: 3px;
  transition:all .5s ease;
 }
@@ -89,7 +106,9 @@ color: #03a9f4;
   box-shadow: 0px 0px 6px #33691e ;
   
 }
-
+.boton-largo{
+  padding: .5em 3em;
+}
 .medium-letter{
   color: #03a9f4 !important;
   font-size: 1em !important;
@@ -99,7 +118,7 @@ color: #03a9f4;
 	position: absolute;
 	left: 0;
 	width: 100%;
-	height: 10em;
+	height: 15em;
  -webkit-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15); 	
@@ -110,7 +129,7 @@ color: #03a9f4;
   position: absolute;
   left: 0;
   width: 100%;
-  height: 13em;
+  height: 15em;
  -webkit-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);   
@@ -185,5 +204,24 @@ color: #03a9f4;
    .subtotal{
     font-size: 1.1em;
     font-style: bold;
-    color: red;
-   }
+    background-color: red !important;
+    color: #fff;
+    border: 1px solid red;
+    padding-top: .2em;
+    padding-bottom: .2em;
+    padding-left: .74em;
+    border-radius: 3px;
+    transition:all .3s;
+}
+.subtotal:hover{
+    border-color: #000;
+}
+  
+.eliminar{
+    color: red !important;
+    cursor: pointer;
+}
+.totales{
+  font-size: 2em;
+color: #33691e  !important;
+}
