--- a/css/materialize.css
+++ b/css/materialize.css
@@ -6745,7 +6745,7 @@ select {
 
 .side-nav {
   position: fixed;
-  width: 240px;
+  width: 250px;
   left: -105%;
   top: 0;
   margin: 0;
@@ -6753,7 +6753,7 @@ select {
   height: calc(100% + 60px);
   height: -moz-calc(100%);
   padding-bottom: 60px;
-  background-color: #FFF;
+  background-color: #444;
   z-index: 999;
   overflow-y: auto;
   will-change: left; }
@@ -6769,7 +6769,7 @@ select {
     .side-nav li:hover, .side-nav li.active {
       background-color: #ddd; }
   .side-nav a {
-    color: #444;
+    color: #FFF;
     display: block;
     font-size: 1rem;
     height: 64px;
