--- a/css/materialize.css
+++ b/css/materialize.css
@@ -1998,7 +1998,7 @@ ul {
 .clearfix {
   clear: both; }
 
-.z-depth-1, .card-panel, .card, .toast, .btn, .btn-large, .btn-floating, .dropdown-content, .collapsible, .side-nav {
+.z-depth-1, .card-panel, .card, .toast, .btn, .btn-large, .btn-floating, .dropdown-content,  .side-nav {
   -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12); }
@@ -6753,7 +6753,7 @@ select {
   height: calc(100% + 60px);
   height: -moz-calc(100%);
   padding-bottom: 60px;
-  background-color: #444;
+  background-color: #cfd8dc;
   z-index: 999;
   overflow-y: auto;
   will-change: left; }
@@ -6767,9 +6767,9 @@ select {
     float: none;
     padding: 0 15px; }
     .side-nav li:hover, .side-nav li.active {
-      background-color: #ddd; }
+      background-color: #607d8b ; }
   .side-nav a {
-    color: #FFF;
+    color: #000;
     display: block;
     font-size: 1rem;
     height: 64px;
