Agregada la funcionalidad de hojas

--- a/css/style.css
+++ b/css/style.css
@@ -235,3 +235,6 @@ color: #33691e  !important;
   -moz-box-shadow: 0 27px 24px 0 rgba(0, 0, 0, 0.2), 0 40px 77px 0 rgba(0, 0, 0, 0.22);
   box-shadow: 0 27px 24px 0 rgba(0, 0, 0, 0.2), 0 40px 77px 0 rgba(0, 0, 0, 0.22); 
 }
+.totalfinal{
+  cursor: text !important;
+}
